--- a/index.html
+++ b/index.html
@@ -319,163 +319,8 @@
             </div>
         </footer>
     </div>
-
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script>
-        const yearEl = document.getElementById('year');
-        yearEl.textContent = new Date().getFullYear();
-
-        const contactForm = document.getElementById('contactForm');
-        const successAlert = document.getElementById('formSuccess');
-        const errorAlert = document.getElementById('formError');
-        const submitButton = contactForm.querySelector('button[type="submit"]');
-        const errorMessageTarget = errorAlert.querySelector('span');
-        const CONTACT_ENDPOINT = window.location.protocol === 'file:'
-            ? 'http://localhost:4000/api/contact'
-            : '/api/contact';
-
-        const consentKey = 'acs-consent';
-        const cookieBanner = document.getElementById('cookieBanner');
-        const acceptEssentialBtn = document.getElementById('acceptEssentialCookies');
-        const acceptAllBtn = document.getElementById('acceptAllCookies');
-        const manageConsentBtn = document.getElementById('manageConsent');
-        const mapWrapper = document.querySelector('[data-map-src]');
-        const defaultConsent = { essential: true, external: false };
-
-        const getStoredConsent = () => {
-            try {
-                return JSON.parse(localStorage.getItem(consentKey)) || defaultConsent;
-            } catch {
-                return defaultConsent;
-            }
-        };
-
-        const updateConsent = (newValues) => {
-            const merged = { ...defaultConsent, ...getStoredConsent(), ...newValues };
-            localStorage.setItem(consentKey, JSON.stringify(merged));
-            applyConsentState();
-        };
-
-        const showBanner = () => {
-            cookieBanner?.classList.remove('d-none');
-        };
-
-        const hideBanner = () => {
-            cookieBanner?.classList.add('d-none');
-        };
-
-        const renderMap = () => {
-            if (!mapWrapper || mapWrapper.querySelector('iframe')) return;
-            const iframe = document.createElement('iframe');
-            iframe.src = mapWrapper.dataset.mapSrc;
-            iframe.loading = 'lazy';
-            iframe.referrerPolicy = 'no-referrer-when-downgrade';
-            iframe.setAttribute('allowfullscreen', '');
-            iframe.title = 'Hartă Google';
-            mapWrapper.innerHTML = '';
-            mapWrapper.appendChild(iframe);
-        };
-
-        const renderMapPlaceholder = () => {
-            if (!mapWrapper) return;
-            const placeholder = document.createElement('div');
-            placeholder.className = 'map-placeholder';
-            placeholder.innerHTML = `
-                <i class="bi bi-geo-alt"></i>
-                <p>Conținutul Google Maps este dezactivat până la acceptarea cookie-urilor externe.</p>
-                <button class="btn btn-outline-primary" data-consent-action="enable-external">
-                    Activează harta
-                </button>
-            `;
-            mapWrapper.innerHTML = '';
-            mapWrapper.appendChild(placeholder);
-        };
-
-        const applyConsentState = () => {
-            const consent = getStoredConsent();
-            if (consent.external) {
-                hideBanner();
-                renderMap();
-            } else {
-                renderMapPlaceholder();
-            }
-        };
-
-        acceptEssentialBtn?.addEventListener('click', () => {
-            updateConsent({ external: false });
-            hideBanner();
-        });
-
-        acceptAllBtn?.addEventListener('click', () => {
-            updateConsent({ external: true });
-            hideBanner();
-        });
-
-        manageConsentBtn?.addEventListener('click', () => {
-            showBanner();
-        });
-
-        mapWrapper?.addEventListener('click', (event) => {
-            if (event.target?.dataset?.consentAction === 'enable-external') {
-                updateConsent({ external: true });
-            }
-        });
-
-        if (!localStorage.getItem(consentKey)) {
-            showBanner();
-        } else {
-            applyConsentState();
-        }
-
-        contactForm.addEventListener('submit', async (event) => {
-            event.preventDefault();
-            successAlert.classList.add('d-none');
-            errorAlert.classList.add('d-none');
-            submitButton.disabled = true;
-            submitButton.textContent = 'Se trimite...';
-
-            const formData = new FormData(contactForm);
-            const payload = {
-                fullName: formData.get('fullName')?.trim(),
-                company: formData.get('company')?.trim(),
-                email: formData.get('email')?.trim(),
-                phone: formData.get('phone')?.trim(),
-                message: formData.get('message')?.trim(),
-                consent: formData.get('consent') === 'true',
-                honeypot: formData.get('honeypot')?.trim() || ''
-            };
-
-            try {
-                const response = await fetch(CONTACT_ENDPOINT, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(payload)
-                });
-
-                const result = await response.json().catch(() => ({}));
-                if (!response.ok) {
-                    const validationMsg = result?.errors
-                        ? Object.values(result.errors).join(' ')
-                        : null;
-                    throw new Error(validationMsg || result?.message || 'Nu am putut trimite mesajul.');
-                }
-
-                successAlert.classList.remove('d-none');
-                contactForm.reset();
-                setTimeout(() => successAlert.classList.add('d-none'), 6000);
-            } catch (error) {
-                errorMessageTarget.textContent = error?.message || 'Nu am putut trimite mesajul.';
-                errorAlert.classList.remove('d-none');
-            } finally {
-                submitButton.disabled = false;
-                submitButton.textContent = 'Trimite';
-            }
-        });
-
-        applyConsentState();
-    </script>
+    <script src="assets/js/bootstrap.bundle.min.js" defer></script>
+    <script src="assets/js/site.js" defer></script>
 </body>
 
 </html>
